# pi

./: CMakeLists.txt  zad1.c  zad10i11.c  zad12.c  zad13.c  zad16z1.c  zad16z2.c  zad16z3.c  zad17.c  zad17f.c  zad17f.h  zad18.c  zad20.c  zad23.c  zad3.c  zad5.c  zad6.c  zad7.c  zad8.c  zad9.c
zestaw1/: zad2p.c  zad2r.c  zad3.c
zestaw2/: zad4.c  zad5.c
