cmake_minimum_required(VERSION 3.14)
project(pi C)

set(CMAKE_C_STANDARD 99)

add_executable(zad1 zad1.c)
add_executable(zad2p zad2p.c)
add_executable(zad2r zad2r.c)
add_executable(zad3 zad3.c)
add_executable(zad4 zad4.c)
add_executable(zad5 zad5.c)
add_executable(zad6 zad6.c)
add_executable(zad7 zad7.c)
add_executable(zad8 zad8.c)
add_executable(zad9 zad9.c)
add_executable(zad10i11 zad10i11.c)
add_executable(zad12 zad12.c)
add_executable(zad16z1 zad16z1.c)
add_executable(zad16z2 zad16z2.c)
add_executable(zad16z3 zad16z3.c)
add_executable(zad17 zad17.c zad17f.c)
add_executable(zad18 zad18.c)
add_executable(zad20 zad20.c)
add_executable(zad22 zad23.c)